# alacritty-nautilus

./: .gitattributes  COPYING  Cargo.toml  PKGBUILD
.github/workflows/: rust.yml
src/: lib.rs  menu_provider.rs
