[package]
name = "alacritty-nautilus"
version = "0.1.0"
authors = ["pkunk <pkunk.ab@gmail.com>"]
license = "GPL-3.0-only"
edition = "2018"

[lib]
name = "alacritty_nautilus"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nautilus-extension = "0.6"
libc = "0.2"
gtk-sys = "0.9"
glib = "0.9"
glib-sys = "0.9"
gobject-sys = "0.9"
